backend/planning-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: planning-service-deployment
spec:
 replicas: 2
 selector:
  matchLabels:
   app: planning-service
 template:
  metadata:
   labels:
    app: planning-service
  spec:
   containers:
    - name: planning-service
      image: ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/nexora-planning-service:latest
      ports:
       - containerPort: 80
