backend/planning-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: planning-service
spec:
 selector:
  app: planning-service
 ports:
  - protocol: TCP
    port: 80
    targetPort: 80
 type: NodePort
