backend/planning-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: planning-service-ingress
 annotations:
  alb.ingress.kubernetes.io/scheme: internet-facing
  alb.ingress.kubernetes.io/target-type: ip
spec:
 ingressClassName: alb
 rules:
  - http:
     paths:
      - path: /api/planning
        pathType: Prefix
        backend:
         service:
          name: planning-service
          port:
           number: 80
